--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,20 @@ Thumbs.db
 *.mov
 *.wmv
 
+# Исключения добавленной Android Studio
+*.iml
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
+local.properties
+
