--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,13 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'androidx.fragment:fragment-ktx:1.5.0'
+    implementation 'androidx.fragment:fragment-ktx:1.5.1'
+
+    //FastAdapter
+
+    implementation "androidx.appcompat:appcompat:1.4.2"
+    implementation "com.mikepenz:fastadapter:5.6.0"
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation "com.mikepenz:fastadapter-extensions-binding:5.5.1"
+    implementation "com.mikepenz:fastadapter-extensions-diff:5.5.1"
 }
