--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.WeatherApp"
+        android:name=".common.App"
         tools:targetApi="31">
         <activity
             android:name=".common.MainActivity"
