--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:3.7.7'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 
     //FastAdapter
 
