--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id "kotlin-kapt"
     id 'kotlin-android'
+    id 'androidx.navigation.safeargs.kotlin'
+    id "kotlin-parcelize"
 }
 
 android {
