--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'app.cash.turbine:turbine:0.9.0'
 
     //FastAdapter
 
